--- a/scripts/config/packages.conf
+++ b/scripts/config/packages.conf
@@ -62,6 +62,7 @@ BOOTLOADER_PACKAGES=(
     "grub-efi-amd64-signed"
     "efibootmgr"
     "shim-signed"
+    "grub-btrfs"
 )
 
 # ============================================================================
